img hover z-index fixed

--- a/final.css
+++ b/final.css
@@ -105,7 +105,7 @@ body {
 .thumbnail:hover {
   box-shadow: 0px 25px 20px -3px rgba(0,0,0,0.75);
   transform: scale(1.3) translate(0,-25%);
-  z-index: 5;
+  z-index: 6;
 }
 
 .thumbnail-img {
